<resources>
    <string name="app_name">TraditionalFoodApp</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Keranjang</string>
    <string name="menu_profile">Profile</string>
    <string name="price">Rp%d</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="add_to_cart">Tambah ke Keranjang : Rp%d</string>
    <string name="total_order">Total pesanan : Rp%d</string>
    <string name="back">Back</string>
    <string name="food_app">Traditional Food App</string>
    <string name="share_message">Hey, I have redeem %1$d rewards in Dicoding with total %2$d Points. Do you want too?</string>
    <string name="my_image"><![CDATA[https://dicoding-web-img.sgp1.cdn.digitaloceanspaces.com/small/avatar/dos:286d9c5f7d0fe7bdeef1f1d1593e48a420230524093144.png]]></string>
    <string name="my_email">bagustofan@yahoo.com</string>
    <string name="my_name">Tofan Bagus Apriyanto</string>
    <string name="about_me">About Me</string>
    <string name="placeholder_search">Ingin cari apa?</string>
    <string name="empty_data">Data Kosong</string>
</resources>